# Eigen-quadratic-programming

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mpc2qp.cpp  mpc2qp.h
locomotion/: Contact.h  ModelPredictiveControl.cpp  ModelPredictiveControl.h  test_constraint.py  util.h
